k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: project1
spec:
# type: LoadBalancer
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
